--- a/public/css/experience.css
+++ b/public/css/experience.css
@@ -43,6 +43,7 @@
 @media screen and (max-width: 1024px) {
   .experience_container {
     grid-template-columns: 1fr;
+    height: 100vh;
   }
 
   .experience_container > div {
@@ -59,7 +60,7 @@
 @media screen and (max-width: 600px) {
   .experience_container {
     gap: 1rem;
-    height: auto;
+    height: 100vh;
   }
   .experience_container > div {
     width: 100%;
