--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -64,5 +64,6 @@ textarea {
   .container.contact_container {
     width: var(--container-width-sm);
     height: 100vh;
+    margin-bottom: 20px;
   }
 }
